# course-refraction-graphics-inator

./: .gitignore  Cargo.toml  Debug.stl  pencil.yaml  scene_data.yaml
SandBox/: Cargo.toml  plotter.py
SandBox/src/: main.rs
app/: Cargo.toml
app/src/: main.rs
docs/: .gitignore  additions.tex  analytic_part.tex  conclusion.tex  course_proj.tex  design_part.tex  experimental_part.tex  intro.tex  links.tex  preambula.tex  report.tex  tech_part.tex  title.tex
engine/: Cargo.toml
engine/src/: lib.rs  renderer.rs  tests.rs
engine/src/renderer/: implementations.rs  objects.rs  scene.rs
engine/src/renderer/implementations/: global_illumination.rs  sampling.rs  simple_illumination.rs
engine/src/renderer/objects/: model.rs  ray.rs
src/: image_generator.rs  image_manager.rs  main.rs  renderer.rs  scene_loaders.rs  tests.rs
src/image_generator/implementations/: multithread.rs  one_thread.rs  rayon.rs
src/image_manager/: implementations.rs
src/image_manager/implementations/: multithread.rs  one_thread.rs  rayon.rs
src/renderer/: camera.rs  color.rs  implementations.rs  model.rs  objects.rs  ray.rs  scene.rs
src/renderer/implementations/: GI.rs  global_illumination.rs  sampling.rs  simple_illumination.rs
src/renderer/objects/: camera.rs  hit.rs  material.rs  model.rs  ray.rs
src/tests/: common.rs
test_data/: Box_Solid.stl  Cup.stl  Glass.stl  Pencil.stl  PlateFront.stl  PlateSun.stl  plane_wall.stl
test_data/glen/: floor.stl  glen.stl  pencil_in_glass.blend  pencil_in_glass.blend1  scene.blend  scene.blend1  walls.stl
(+7 files in other folders)
