
[package]
name = "RayTest"
version = "0.1.0"
edition = "2024"

[dependencies]

stl_io = "0.8.5"
nalgebra = "0.33.2"
image = "0.25.6"
derive_builder = "*"
rayon = "*"
rand = "0.9.1"

rand_chacha = "0.9"
rand_xoshiro = "0.7.0"
rand_pcg = "0.9.0"

# Tests
approx = "*"

# Info
indicatif = "*"

# GUI
egui = "0.31"
eframe = "0.31"
